--- a/FitCook/Views/Base.lproj/Main.storyboard
+++ b/FitCook/Views/Base.lproj/Main.storyboard
@@ -76,29 +76,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="calculateButton" destination="665-r0-GCU" id="2NN-eC-8A8"/>
-                        <outlet property="ingredientTextField" destination="aj4-8w-6ib" id="NBK-EO-Zlo"/>
                         <outlet property="tableView" destination="Uog-0L-4vr" id="dUO-O7-h6A"/>
-                        <outlet property="toolbar" destination="wV0-7y-hPd" id="o6r-NX-vH7"/>
+                        <outlet property="textField" destination="aj4-8w-6ib" id="NBK-EO-Zlo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="bottomRight" id="wV0-7y-hPd">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <items>
-                        <barButtonItem title=":weight" id="CWx-OG-qn0">
-                            <connections>
-                                <action selector="weightButtonPressed:" destination="BYZ-38-t0r" id="zFQ-mf-j0a"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="BZl-hg-vuH"/>
-                        <barButtonItem title="Done" style="done" id="q9k-MG-moJ">
-                            <connections>
-                                <action selector="doneButtonPressed:" destination="BYZ-38-t0r" id="Q4p-9g-T35"/>
-                            </connections>
-                        </barButtonItem>
-                    </items>
-                </toolbar>
             </objects>
             <point key="canvasLocation" x="847" y="149"/>
         </scene>
@@ -210,25 +192,112 @@
             </objects>
             <point key="canvasLocation" x="-742" y="149"/>
         </scene>
-        <!--KitchenWare-->
-        <scene sceneID="Qpe-Pv-PfX">
+        <!--Kitchen Ware Controller-->
+        <scene sceneID="u1N-Gd-sPQ">
             <objects>
-                <viewControllerPlaceholder storyboardName="KitchenWare" id="YDY-5C-x7Y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="RH2-7l-VdT"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OZz-pK-9fC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="kitchenwareVC" id="wai-QL-FKb" customClass="KitchenWareController" customModule="FitCook" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hFg-2z-pHv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <connections>
+                            <outlet property="dataSource" destination="wai-QL-FKb" id="3mB-Zh-sCK"/>
+                            <outlet property="delegate" destination="wai-QL-FKb" id="txK-ma-2Yt"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="h8H-Ps-C3F">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="1N0-OT-0H7">
+                            <connections>
+                                <action selector="addDishPressed:" destination="wai-QL-FKb" id="OzG-cK-fFg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ucd-eV-Zfx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-60" y="639"/>
+            <point key="canvasLocation" x="-743" y="867"/>
         </scene>
-        <!--Ingredients-->
-        <scene sceneID="bMV-NJ-5Fx">
+        <!--Kitchen Ware Detail View Controller-->
+        <scene sceneID="ju8-WW-G1h">
             <objects>
-                <viewControllerPlaceholder storyboardName="Ingredients" id="lnh-FE-yen" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="4Lc-TF-cqe"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MBd-Wl-el7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="dishDetailVC" id="kJi-FL-KJF" customClass="KitchenWareDetailViewController" customModule="FitCook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HRw-bW-VJ7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="u6M-ck-w8S">
+                                <rect key="frame" x="20" y="64" width="335" height="384"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Название посуды" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Niy-9f-5bP">
+                                        <rect key="frame" x="20" y="0.0" width="295" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="WVk-BD-Hbe">
+                                        <rect key="frame" x="20" y="42" width="295" height="34"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вес" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgd-LY-6W4">
+                                                <rect key="frame" x="0.0" y="0.0" width="30" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Npc-22-cPn">
+                                                <rect key="frame" x="235" y="0.0" width="60" height="34"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="EJX-GJ-1uA"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aVi-6m-nhd">
+                                        <rect key="frame" x="17.666666666666657" y="84" width="300" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="DzH-Lu-RDh"/>
+                                            <constraint firstAttribute="height" constant="300" id="l4Y-qg-hA4"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="WVk-BD-Hbe" secondAttribute="trailing" constant="20" symbolic="YES" id="8th-Zd-5iv"/>
+                                    <constraint firstItem="WVk-BD-Hbe" firstAttribute="leading" secondItem="u6M-ck-w8S" secondAttribute="leading" constant="20" symbolic="YES" id="N7i-Rc-3ix"/>
+                                    <constraint firstItem="Niy-9f-5bP" firstAttribute="leading" secondItem="u6M-ck-w8S" secondAttribute="leading" constant="20" symbolic="YES" id="a7k-u7-KBV"/>
+                                    <constraint firstAttribute="trailing" secondItem="Niy-9f-5bP" secondAttribute="trailing" constant="20" symbolic="YES" id="z9b-ls-c7X"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2o9-bC-8N3">
+                                <rect key="frame" x="161.66666666666666" y="448" width="52" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonPressed:" destination="kJi-FL-KJF" eventType="touchUpInside" id="kH6-8F-dNI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="2o9-bC-8N3" firstAttribute="top" secondItem="u6M-ck-w8S" secondAttribute="bottom" id="8MQ-J7-Xvs"/>
+                            <constraint firstItem="u6M-ck-w8S" firstAttribute="top" secondItem="XYT-zG-x5G" secondAttribute="top" constant="20" id="IHP-zi-os3"/>
+                            <constraint firstItem="2o9-bC-8N3" firstAttribute="centerX" secondItem="HRw-bW-VJ7" secondAttribute="centerX" id="Psc-kh-80R"/>
+                            <constraint firstItem="XYT-zG-x5G" firstAttribute="trailing" secondItem="u6M-ck-w8S" secondAttribute="trailing" constant="20" id="d8w-b3-clI"/>
+                            <constraint firstItem="u6M-ck-w8S" firstAttribute="leading" secondItem="XYT-zG-x5G" secondAttribute="leading" constant="20" id="pd4-r9-VSM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XYT-zG-x5G"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="cS1-ea-Qym"/>
+                    <connections>
+                        <outlet property="image" destination="aVi-6m-nhd" id="XTW-tm-7d0"/>
+                        <outlet property="nameTextField" destination="Niy-9f-5bP" id="weI-BJ-Nrq"/>
+                        <outlet property="weightTextField" destination="Npc-22-cPn" id="ybS-FX-Pv2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v7a-En-tTB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-835" y="639"/>
+            <point key="canvasLocation" x="49" y="867"/>
         </scene>
     </scenes>
     <resources>
