--- a/FitCook/Views/KitchenWareCell.xib
+++ b/FitCook/Views/KitchenWareCell.xib
@@ -1,71 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="dish" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="KitchenWareCell" customModule="FitCook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="dish" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="KitchenWareCell" customModule="FitCook" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+                <rect key="frame" x="0.0" y="0.0" width="344" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MFd-Cx-AlT">
-                        <rect key="frame" x="8" y="8" width="154" height="68"/>
+                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MFd-Cx-AlT">
+                        <rect key="frame" x="8" y="0.0" width="328" height="60"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uGf-fK-mlf">
-                                <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="68" id="4yC-3S-GSG"/>
-                                    <constraint firstAttribute="height" constant="68" id="csI-RM-3v8"/>
-                                </constraints>
-                                <state key="normal" image="camera" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="62"/>
-                                </state>
-                                <connections>
-                                    <action selector="imageButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2hv-JO-ghb"/>
-                                </connections>
-                            </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="MJ0-gg-6f6">
-                                <rect key="frame" x="76" y="0.0" width="78" height="68"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кастрюля" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94E-5I-RWi">
-                                        <rect key="frame" x="0.0" y="0.0" width="78" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1056 гр." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lza-e8-T9h">
-                                        <rect key="frame" x="0.0" y="47.5" width="78" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кастрюля" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94E-5I-RWi">
+                                <rect key="frame" x="0.0" y="18" width="160" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1056 гр." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lza-e8-T9h">
+                                <rect key="frame" x="168" y="18" width="160" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="MFd-Cx-AlT" secondAttribute="bottom" constant="8" id="0OO-mn-J44"/>
-                    <constraint firstItem="MFd-Cx-AlT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="eXn-7U-Fva"/>
-                    <constraint firstItem="MFd-Cx-AlT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hal-VW-VUa"/>
+                    <constraint firstAttribute="bottom" secondItem="MFd-Cx-AlT" secondAttribute="bottom" id="2d9-ZZ-y2f"/>
+                    <constraint firstItem="MFd-Cx-AlT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="2ts-Op-o8i"/>
+                    <constraint firstAttribute="trailing" secondItem="MFd-Cx-AlT" secondAttribute="trailing" constant="8" id="QoJ-B0-hJF"/>
+                    <constraint firstItem="MFd-Cx-AlT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="epJ-DE-qL6"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="imageButton" destination="uGf-fK-mlf" id="M1Q-M5-gUT"/>
                 <outlet property="nameLabel" destination="94E-5I-RWi" id="81H-ea-jOz"/>
                 <outlet property="weightLabel" destination="Lza-e8-T9h" id="YTd-ZQ-0dZ"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="148.66071428571428"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="camera" catalog="system" width="64" height="48"/>
-    </resources>
 </document>
